@@ -127,8 +127,8 @@ Constructor.
  use strict;
  use warnings;
 
- use Encode qw(encode_utf8);
  use Unicode::Block;
+ use Unicode::UTF8 qw(encode_utf8);
 
  # Object.
  my $obj = Unicode::Block->new;
