@@ -3,12 +3,12 @@ abstract: 'Class for unicode block manipulation.'
 author:
   - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
-  Encode: 0
   English: 0
   Error::Pure::Utils: 0.13
   ExtUtils::MakeMaker: 6.36
   Test::More: 0
   Test::NoWarnings: 0
+  Unicode::UTF8: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
