@@ -1,4 +1,5 @@
 0.08
+ - Rewrite Encode::decode_utf8 to better Unicode::UTF8::decode_utf8.
 
 0.07 2018-02-07T07:54:14+01:00
  - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
